examples/test/testpolicy59.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy59
  namespace: namespace93
spec:
  podSelector:
    matchLabels:
      key25: value11
      key11: value41
      key14: value29
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key40: value40
          key45: value28
          key44: value32
      podSelector:
        matchLabels:
          key6: value18
